--- a/src/main/resources/com/example/together/tasklist-view.fxml
+++ b/src/main/resources/com/example/together/tasklist-view.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.together.controller.TaskListController"
-            prefHeight="400.0" prefWidth="600.0">
+<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.TaskController">
+    <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
+   <Rectangle arcHeight="50.0" arcWidth="50.0" fill="WHITE" height="1024.0" layoutX="150.0" layoutY="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="424.0" StackPane.alignment="CENTER_RIGHT" />
+    <HBox>
+        <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="130.0" BorderPane.alignment="CENTER">
+            <children>
+                <Button mnemonicParsing="false" text="Settings" />
+                <Button mnemonicParsing="false" text="Friends" />
+                <Button mnemonicParsing="false" text="Tasks" />
+                <Button mnemonicParsing="false" text="Home" />
+            </children>
+            <padding>
+                <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+            </padding></VBox>
+        <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
 
-</AnchorPane>
+        </BorderPane>
+    </HBox>
+</StackPane>
