fixing view logic

--- a/src/main/resources/com/example/together/main.css
+++ b/src/main/resources/com/example/together/main.css
@@ -7,6 +7,10 @@
     -fx-background-color: #FFF6ED;
     -fx-text-fill: #8C5D43;
 }
+.darkButton {
+    -fx-background-color: #8C5D43;
+    -fx-text-fill: #FFF6ED;
+}
 
 /*custom font*/
 .roboto-thin {
@@ -80,3 +84,16 @@
     font-weight: 900;
     font-style: italic;
 }
+/* gives drop shadow to elements */
+.drop-shadow {
+    -fx-stroke: rgba(0, 0, 0, 0);
+    -fx-stroke-width: 1;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 10, 0, 0, 0);
+}
+.list-view-no-background {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
+}
+
