--- a/src/main/resources/com/example/together/tasklist-view.fxml
+++ b/src/main/resources/com/example/together/tasklist-view.fxml
@@ -2,25 +2,103 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.TaskController">
-    <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
-   <Rectangle arcHeight="50.0" arcWidth="50.0" fill="WHITE" height="1024.0" layoutX="150.0" layoutY="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="424.0" StackPane.alignment="CENTER_RIGHT" />
-    <HBox>
-        <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="130.0" BorderPane.alignment="CENTER">
-            <children>
-                <Button mnemonicParsing="false" text="Settings" />
-                <Button mnemonicParsing="false" text="Friends" />
-                <Button mnemonicParsing="false" text="Tasks" />
-                <Button mnemonicParsing="false" text="Home" />
-            </children>
-            <padding>
-                <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
-            </padding></VBox>
+<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.TaskListController">
+    <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
+   <Rectangle arcHeight="50.0" arcWidth="50.0" fill="WHITE" height="1024.0" layoutX="150.0" layoutY="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="424.0" StackPane.alignment="CENTER_RIGHT" />
         <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-
-        </BorderPane>
-    </HBox>
+            <left>
+                <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
+                    <children>
+                        <Button mnemonicParsing="false">
+                            <graphic>
+                                <ImageView fitHeight="16.0" fitWidth="16.0">
+                                    <image>
+                                        <!-- Add your favicon image URL here -->
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </Button>
+                        <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                            <children>
+                                <Button mnemonicParsing="false" />
+                                <Button mnemonicParsing="false" />
+                                <Button mnemonicParsing="false" />
+                            </children>
+                            <padding>
+                                <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                            </padding>
+                        </VBox>
+                    </children>
+                    <VBox.margin>
+                        <Insets top="15.0" />
+                    </VBox.margin>
+                    <padding>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                    </padding>
+                </VBox>
+            </left>
+         <right>
+            <VBox prefHeight="200.0" prefWidth="424.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fitHeight="117.0" fitWidth="117.0" pickOnBounds="true" preserveRatio="true" />
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label text="USERNAME" />
+                              <Button mnemonicParsing="false" onAction="#openProfile" styleClass="darkButton" text="Profile">
+                              <font>
+                                 <Font name="JetBrains Mono SemiBold" size="12.0" />
+                              </font></Button>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <Label text="My Groups">
+                  <font>
+                     <Font name="JetBrains Mono Medium" size="12.0" />
+                  </font></Label>
+                  <Label text="My friends">
+                  <font>
+                     <Font name="JetBrains Mono Medium" size="12.0" />
+                  </font></Label>
+               </children>
+               <padding>
+                  <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+               </padding>
+            </VBox>
+         </right>
+         <center>
+            <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <VBox HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label text="My Tasks" />
+                        <ListView fx:id="taskListView" prefHeight="200.0" prefWidth="200.0" styleClass="list-view-no-background" />
+                     <Button mnemonicParsing="false" onAction="#newTask" styleClass="darkButton" text="New" />
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="50.0" left="50.0" right="50.0" top="35.0" />
+                     </padding>
+                  </VBox>
+                  <VBox HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label text="My Habits" />
+                        <ListView prefHeight="200.0" prefWidth="200.0" styleClass="list-view-no-background" />
+                     </children>
+                     <padding>
+                        <Insets bottom="50.0" left="50.0" right="50.0" top="35.0" />
+                     </padding>
+                  </VBox>
+               </children>
+            </HBox>
+         </center></BorderPane>
 </StackPane>
