--- a/src/main/resources/com/example/together/BASE-TO-COPY.fxml
+++ b/src/main/resources/com/example/together/BASE-TO-COPY.fxml
@@ -1,63 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.NewTaskController">
-    <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
+<?import javafx.scene.text.Font?>
+<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.NewTaskController">
+    <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="1300.0" StackPane.alignment="CENTER_RIGHT">
+      <StackPane.margin>
+         <Insets />
+      </StackPane.margin></Rectangle>
     <Rectangle arcHeight="50.0" arcWidth="50.0" fill="WHITE" height="1024.0" layoutX="150.0" layoutY="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="424.0" StackPane.alignment="CENTER_RIGHT" />
-    <HBox>
-        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
-            <children>
-                <Button mnemonicParsing="false">
-                    <graphic>
-                        <ImageView fitHeight="16.0" fitWidth="16.0">
-                            <image>
-                                <!-- Add your favicon image URL here -->
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-                <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
-                    <children>
-                        <Button mnemonicParsing="false" text="Button 1" />
-                        <Button mnemonicParsing="false" text="Button 2" />
-                        <Button mnemonicParsing="false" text="Button 3" />
-                    </children>
-                    <padding>
-                        <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
-                    </padding>
-                </VBox>
-            </children>
-            <VBox.margin>
-                <Insets top="15.0" />
-            </VBox.margin>
-            <padding>
-                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-            </padding>
-        </VBox>
-        <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-            <right>
-                <VBox prefHeight="200.0" prefWidth="424.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <ImageView fitHeight="117.0" fitWidth="117.0" pickOnBounds="true" preserveRatio="true" />
-                                <VBox prefHeight="200.0" prefWidth="100.0">
-                                    <children>
-                                        <Label text="USERNAME" />
-                                        <Button mnemonicParsing="false" text="Profile" />
-                                    </children>
-                                </VBox>
-                            </children>
-                        </HBox>
-                        <Label text="My Groups" />
-                        <Label text="My friends" />
-                    </children>
-                </VBox>
-            </right></BorderPane>
-    </HBox>
+    <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+        <left>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
+                <children>
+                    <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
+                  <graphic>
+                          <FontAwesomeIconView fill="#fff6ed" glyphName="COG" size="40" text="" />
+                  </graphic>
+                    </Button>
+                    <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                        <children>
+                            <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                           <FontAwesomeIconView fill="#fff6ed" glyphName="GROUP" size="40" />
+                        </graphic></Button>
+                            <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                                <FontAwesomeIconView fill="#fff6ed" glyphName="LIST" size="40" text="" />
+                        </graphic></Button>
+                            <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                                <FontAwesomeIconView fill="#fff6ed" glyphName="HOME" size="40" />
+                        </graphic></Button>
+                        </children>
+                        <padding>
+                            <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                        </padding>
+                    </VBox>
+                </children>
+                <VBox.margin>
+                    <Insets top="15.0" />
+                </VBox.margin>
+                <padding>
+                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                </padding>
+            </VBox>
+        </left>
+        <right>
+            <VBox prefHeight="200.0" prefWidth="424.0" BorderPane.alignment="CENTER">
+                <children>
+                    <HBox prefHeight="100.0" prefWidth="200.0">
+                        <children>
+                            <ImageView fitHeight="117.0" fitWidth="117.0" pickOnBounds="true" preserveRatio="true" />
+                            <VBox prefHeight="200.0" prefWidth="100.0">
+                                <children>
+                                    <Label text="USERNAME" />
+                                    <Button mnemonicParsing="false" onAction="#openProfile" styleClass="darkButton" text="Profile">
+                                        <font>
+                                            <Font name="JetBrains Mono SemiBold" size="12.0" />
+                                        </font></Button>
+                                </children>
+                            </VBox>
+                        </children>
+                    </HBox>
+                    <Label text="My Groups">
+                        <font>
+                            <Font name="JetBrains Mono Medium" size="12.0" />
+                        </font></Label>
+                    <Label text="My friends">
+                        <font>
+                            <Font name="JetBrains Mono Medium" size="12.0" />
+                        </font></Label>
+                </children>
+                <padding>
+                    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+                </padding>
+            </VBox>
+        </right></BorderPane>
 </StackPane>
