--- a/src/main/resources/com/example/together/new-task-view.fxml
+++ b/src/main/resources/com/example/together/new-task-view.fxml
@@ -2,46 +2,53 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
+<?import org.kordamp.ikonli.javafx.*?>
 
 <StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.NewTaskController">
    <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
-<HBox>
-   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
-      <children>
-         <Button mnemonicParsing="false">
-            <graphic>
-               <ImageView fitHeight="16.0" fitWidth="16.0">
-                  <image>
-                     <!-- Add your favicon image URL here -->
-                  </image>
-               </ImageView>
-            </graphic>
-         </Button>
-         <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+   <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+      <left>
+         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
             <children>
-               <Button mnemonicParsing="false" text="Button 1" />
-               <Button mnemonicParsing="false" text="Button 2" />
-               <Button mnemonicParsing="false" text="Button 3" />
+               <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
+                  <graphic>
+                     <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
+                  </graphic>
+               </Button>
+               <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                  <children>
+                     <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                           <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
+                        </graphic>
+                     </Button>
+                     <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                           <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
+                        </graphic>
+                     </Button>
+                     <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                           <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
+                        </graphic>
+                     </Button>
+                  </children>
+                  <padding>
+                     <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                  </padding>
+               </VBox>
             </children>
+            <VBox.margin>
+               <Insets top="15.0" />
+            </VBox.margin>
             <padding>
-               <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+               <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
             </padding>
          </VBox>
-      </children>
-      <VBox.margin>
-         <Insets top="15.0" />
-      </VBox.margin>
-         <padding>
-            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-         </padding>
-   </VBox>
-
-
-   <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+      </left>
       <bottom>
          <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
@@ -143,5 +150,4 @@
             <Insets bottom="10.0" left="100.0" right="100.0" top="10.0" />
          </padding>
    </BorderPane>
-</HBox>
 </StackPane>
