--- a/src/main/resources/com/example/together/groups-view.fxml
+++ b/src/main/resources/com/example/together/groups-view.fxml
@@ -1,58 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import javafx.geometry.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import org.kordamp.ikonli.javafx.*?>
 
-<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.TaskListController">
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.image.ImageView?>
+<StackPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.together.controller.GroupsController">
     <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fff6ed" height="1024.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="1300.0" StackPane.alignment="CENTER_RIGHT" />
     <Rectangle arcHeight="50.0" arcWidth="50.0" fill="WHITE" height="1024.0" layoutX="150.0" layoutY="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" styleClass="drop-shadow" width="424.0" StackPane.alignment="CENTER_RIGHT" />
     <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-       <left>
-           <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
-               <children>
-                   <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
-                       <graphic>
-                           <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
-                       </graphic>
-                   </Button>
-                   <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
-                       <children>
-                           <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
-                               <graphic>
-                                   <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
-                               </graphic>
-                           </Button>
-                           <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
-                               <graphic>
-                                   <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
-                               </graphic>
-                           </Button>
-                           <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
-                               <graphic>
-                                   <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
-                               </graphic>
-                           </Button>
-                       </children>
-                       <padding>
-                           <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
-                       </padding>
-                   </VBox>
-               </children>
-               <VBox.margin>
-                   <Insets top="15.0" />
-               </VBox.margin>
-               <padding>
-                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-               </padding>
-           </VBox>
+        <left>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
+                <children>
+                    <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
+                        </graphic>
+                    </Button>
+                    <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                        <children>
+                            <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
+                                <graphic>
+                                    <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
+                                </graphic>
+                            </Button>
+                            <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
+                                <graphic>
+                                    <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
+                                </graphic>
+                            </Button>
+                            <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
+                                <graphic>
+                                    <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
+                                </graphic>
+                            </Button>
+                        </children>
+                        <padding>
+                            <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
+                        </padding>
+                    </VBox>
+                </children>
+                <VBox.margin>
+                    <Insets top="15.0" />
+                </VBox.margin>
+                <padding>
+                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                </padding>
+            </VBox>
 
-       </left>
+        </left>
         <right>
             <VBox fx:id="rightBox" prefHeight="200.0" prefWidth="424.0" BorderPane.alignment="CENTER">
                 <children>
@@ -62,21 +64,21 @@
                             <VBox alignment="TOP_RIGHT" prefHeight="200.0" HBox.hgrow="ALWAYS">
                                 <children>
                                     <Label fx:id="usernameLabel" styleClass="roboto-medium" text="USERNAME">
-                              <font>
-                                 <Font size="24.0" />
-                              </font></Label>
-                                    <Button mnemonicParsing="false" fx:id="openProfile" text="Profile">
+                                        <font>
+                                            <Font size="24.0" />
+                                        </font></Label>
+                                    <Button mnemonicParsing="false" onAction="#openProfile" text="Profile">
                                         <font>
                                             <Font name="JetBrains Mono SemiBold" size="18.0" />
                                         </font>
-                              <styleClass>
-                                 <String fx:value="darkButton" />
-                                 <String fx:value="roboto-medium" />
-                              </styleClass></Button>
+                                        <styleClass>
+                                            <String fx:value="darkButton" />
+                                            <String fx:value="roboto-medium" />
+                                        </styleClass></Button>
                                 </children>
-                        <padding>
-                           <Insets left="20.0" />
-                        </padding>
+                                <padding>
+                                    <Insets left="20.0" />
+                                </padding>
                             </VBox>
                         </children>
                     </HBox>
@@ -84,12 +86,12 @@
                         <font>
                             <Font name="JetBrains Mono Medium" size="18.0" />
                         </font></Label>
-               <ListView fx:id="groupsListview" prefHeight="200.0" prefWidth="200.0" />
+                    <ListView fx:id="groupsListview" prefHeight="200.0" prefWidth="200.0" />
                     <Label styleClass="roboto-medium" text="My friends">
                         <font>
                             <Font name="JetBrains Mono Medium" size="18.0" />
                         </font></Label>
-               <ListView fx:id="friendsListview" prefHeight="200.0" prefWidth="200.0" />
+                    <ListView fx:id="friendsListview" prefHeight="200.0" prefWidth="200.0" />
                 </children>
                 <padding>
                     <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
@@ -102,18 +104,18 @@
                     <VBox HBox.hgrow="ALWAYS">
                         <children>
                             <Label styleClass="roboto-medium" text="My Tasks">
-                        <font>
-                           <Font size="18.0" />
-                        </font></Label>
+                                <font>
+                                    <Font size="18.0" />
+                                </font></Label>
                             <ListView fx:id="taskListView" prefHeight="700.0" prefWidth="200.0" styleClass="list-view-no-background" />
                             <Button mnemonicParsing="false" onAction="#newTask" text="New">
-                        <font>
-                           <Font size="18.0" />
-                        </font>
-                        <styleClass>
-                           <String fx:value="darkButton" />
-                           <String fx:value="roboto-medium" />
-                        </styleClass></Button>
+                                <font>
+                                    <Font size="18.0" />
+                                </font>
+                                <styleClass>
+                                    <String fx:value="darkButton" />
+                                    <String fx:value="roboto-medium" />
+                                </styleClass></Button>
                         </children>
                         <HBox.margin>
                             <Insets />
@@ -125,9 +127,9 @@
                     <VBox HBox.hgrow="ALWAYS">
                         <children>
                             <Label styleClass="roboto-medium" text="My Habits">
-                        <font>
-                           <Font size="18.0" />
-                        </font></Label>
+                                <font>
+                                    <Font size="18.0" />
+                                </font></Label>
                             <ListView fx:id="habitListView" prefHeight="700.0" prefWidth="200.0" styleClass="list-view-no-background" />
                         </children>
                         <padding>
@@ -179,7 +181,7 @@
                         <font>
                             <Font name="JetBrains Mono Medium" size="18.0" />
                         </font></Label>
-                   <Spinner fx:id="spinnerHabit" prefWidth="70.0">
+                    <Spinner fx:id="spinnerHabit" prefWidth="70.0">
                         <HBox.margin>
                             <Insets left="10.0" right="10.0" />
                         </HBox.margin>
