--- a/src/main/resources/com/example/together/new-task-view.fxml
+++ b/src/main/resources/com/example/together/new-task-view.fxml
@@ -49,23 +49,6 @@
             </padding>
          </VBox>
       </left>
-      <bottom>
-         <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <children>
-               <Button mnemonicParsing="false" onAction="#createTask" styleClass="darkButton" text="Create">
-                  <font>
-                     <Font size="18.0" />
-                  </font></Button>
-               <Button mnemonicParsing="false" onAction="#cancel" styleClass="lightButton" text="Cancel">
-                  <font>
-                     <Font size="18.0" />
-                  </font></Button>
-            </children>
-            <padding>
-               <Insets bottom="10.0" />
-            </padding>
-         </HBox>
-      </bottom>
       <top>
          <Label text="New Task" textAlignment="RIGHT" BorderPane.alignment="TOP_RIGHT">
             <font>
@@ -140,14 +123,31 @@
                         <Font name="JetBrains Mono Medium" size="12.0" />
                      </font>
                   </Label>
+               <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0">
+                  <children>
+                     <Button mnemonicParsing="false" onAction="#createTask" styleClass="darkButton" text="Create">
+                        <font>
+                           <Font size="18.0" />
+                        </font>
+                     </Button>
+                     <Button mnemonicParsing="false" onAction="#cancel" styleClass="lightButton" text="Cancel">
+                        <font>
+                           <Font size="18.0" />
+                        </font>
+                     </Button>
+                  </children>
+                  <padding>
+                     <Insets bottom="10.0" />
+                  </padding>
+               </HBox>
             </children>
             <padding>
-               <Insets left="20.0" right="20.0" top="10.0" />
+               <Insets left="100.0" right="20.0" top="10.0" />
             </padding>
          </VBox>
       </center>
          <padding>
-            <Insets bottom="10.0" left="100.0" right="100.0" top="10.0" />
+            <Insets bottom="10.0" right="100.0" top="10.0" />
          </padding>
    </BorderPane>
 </StackPane>
